Fix for the flex wrap for the recipe preview cards

--- a/public/style.css
+++ b/public/style.css
@@ -8,11 +8,6 @@ html{
     background-color: #FCF4E7;
 }
 
-.body{
-    display: flex;
-    flex-wrap: wrap;
-}
-
 header{
     display: flex;
     position: relative;
@@ -346,13 +341,15 @@ The active tab by default being the ALL tab*/
 
 .recipe-preview{
     display: flex;
+    flex-wrap: wrap;
 }
+
 /*recipe-preview styling*/
 .recipe-preview-container{
+    display: inline-block;
     border: 3px solid black;
     border-radius: 10px;
-    /* width: 15%; */
-    max-width: 20%;
+    max-width: 300px;
     padding: 20px;
     margin: 10px;
     background-color: #BCBDC1;
